# jun2026-builder-sat

./: .env.example  .gitignore  README.md  agents.py  agents_live.py  app.py  llm.py  models.py  orchestrator.py  pyproject.toml
docs/: ADLC.md  CONCEPT_BRIEF.md  DEMO_SCRIPT.md  MODEL_SELECTION.md
documentation/: README.md  antique-infernal-engine-guide.html
evals/: __init__.py  benchmark.json  evals.json  run.py
fixtures/nokia_3590/: observation.json  research.json
fixtures/pinwheel/: observation.json  research.json
fixtures/punched_cards/: observation.json  research.json
fixtures/ti_82/: observation.json  research.json
runs/nokia_3590/: article.md  math.json  observation.json  research.json  trace.json
runs/pinwheel/: article.md  math.json  observation.json  research.json  trace.json
runs/punched_cards/: article.md  math.json  observation.json  research.json  trace.json
runs/ti_82/: article.md  math.json  observation.json  qc.json  research.json  trace.json
skills/antique-power-math/: SKILL.md
skills/antique-power-math/references/: constants.yaml  taxonomy.json
skills/antique-power-math/scripts/: power_calc.py
skills/trcl-field-guide-writer/: SKILL.md
skills/trcl-field-guide-writer/assets/: article_template.md
skills/trcl-field-guide-writer/references/: voice_guide.md
static/: index.html  main.js
tests/: test_power_calc.py
