[project]
name = "antique-infernal-engine"
version = "0.1.0"
description = "Upload an antique; compute whether it could power or run AI. Humor decorative, math structural."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3",
    "skills-ref>=0.1",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false
